Fix breadcrumb overlapping dropdown

--- a/src/scss/_breadcrumb.scss
+++ b/src/scss/_breadcrumb.scss
@@ -4,5 +4,5 @@
   color: $breadcrumb-color;
   font-size: $breadcrumb-font-size;
   position: relative;
-  z-index: $zindex-sticky;
+  z-index: $zindex-nav;
 }
