--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -132,6 +132,8 @@ $sidebar-box-shadow: 0 0 .25rem hsla(0, 0%, 0%, .25) !default;
 $sidebar-box-shadow-sm: 0 0 .5rem hsla(0, 0%, 0%, .25) !default;
 $sidebar-width: 16.25rem !default;
 
+$zindex-nav: 800 !default;
+
 // Code highlight
 
 $source-code-attribute: $blue !default;
